11 - Ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:   website
  namespace: website
  labels:
    app: website-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
        - name: games-website
          image: stevearacom/website
          ports:
            - containerPort: 3000
      volumes:
        - name: config
          configMap:
            name: config-website
