11 - Ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: website
spec:
  selector:
    app: website
  ports:
    - port: 80
      targetPort: 3000
